fix stuff left behind so can drill switch to restaurants, drill down, get styles

--- a/public/mobile/stylesheets/custom.css
+++ b/public/mobile/stylesheets/custom.css
@@ -104,19 +104,19 @@ padding: .3em .3em;
     color:#ffffff;
     text-shadow: 1px 1px 1px #571e15;
 }
-#restaurantsButton span {
+#placesButton span {
     text-align: left;
     text-indent: 24px;
 }
 
-#restaurantsButton.x-button span {
+#placesButton.x-button span {
     background: url('../../images/restaurant-icon-OFF.png') no-repeat;
     font-size:12px;
     font-weight:bold;
     color:#f39a8a;
     text-shadow: 1px 1px 1px #943325;
 }
-#restaurantsButton.x-button-pressed span {
+#placesButton.x-button-pressed span {
     background: url('../../images/restaurant-icon-ON.png') no-repeat;
     color:#ffffff;
     text-shadow: 1px 1px 1px #571e15;
